# angelia

./: .coveragerc  .dockerignore  .env  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Pipfile  README.md  bink_api_v2.yaml  commands.py  environment.py  example_local_secrets.json  local_secrets.json  main.py  openapi.yml  pyproject.toml  pytest.ini  settings.py  setup.py  style.sh  tox.ini  wsgi.py
.github/workflows/: ci.yaml  prod_release.yaml  test.yaml
angelia/: encryption.py  report.py  settings.py  version.py
angelia/api/: app.py  auth.py  custom_error_handlers.py  exceptions.py  metrics.py  middleware.py  serializers.py  shared_data.py  validators.py
angelia/api/helpers/: metrics.py  vault.py
angelia/cli/: commands.py
angelia/handlers/: loyalty_card.py  loyalty_plan.py  payment_account.py  token.py  user.py  wallet.py
angelia/handlers/helpers/: images.py
angelia/hermes/: db.py  models.py  utils.py
angelia/lib/: consents.py  credentials.py  encryption.py  images.py  loyalty_card.py
angelia/messaging/: message_broker.py  sender.py
angelia/resources/: base_resource.py  livez.py  loyalty_cards.py  loyalty_plans.py  metrics.py  payment_accounts.py  readyz.py  token.py  urls.py  users.py  wallet.py
app/: encryption.py  report.py  version.py
app/api/: app.py  auth.py  custom_error_handlers.py  exceptions.py  filter.py  healthz.py  metrics.py  middleware.py  serializers.py  shared_data.py  validators.py
app/api/helpers/: metrics.py  sentry.py  vault.py
app/handlers/: base.py  loyalty_card.py  loyalty_plan.py  magic_link.py  payment_account.py  token.py  user.py  wallet.py
app/handlers/helpers/: images.py
app/hermes/: db.py  events.py  exceptions.py  history.py  models.py  utils.py
app/hermes/db/: models.py  session.py
app/lib/: consents.py  credentials.py  encryption.py  loyalty_card.py  loyalty_plan.py  payment_card.py  singletons.py  vouchers.py
app/messaging/: message_broker.py  sender.py
app/resources/: base_resource.py  example.py  healthz.py  livez.py  loyalty_cards.py  loyalty_plans.py  magic_link.py  metrics.py  payment_accounts.py  readyz.py  token.py  urls.py  users.py  wallet.py  wallets.py  wonger.py
qa_tests/: config.py
qa_tests/environments/: __init__.py
qa_tests/tests/: conftest.py
qa_tests/tests/api/: __init__.py  base.py
qa_tests/tests/features/payment_cards/: payment_cards_wasabi.feature
qa_tests/tests/helpers/: constants.py  test_context.py  test_data_utils.py
qa_tests/tests/helpers/vault/: channel_vault.py
qa_tests/tests/payload/membership_cards/: iceland.py
qa_tests/tests/payload/payment_cards/: payment_card.py  transaction_matching_payment_file.py
tests/: common.py  conftest.py  factories.py  test_sending_service.py
tests/authentication/: test_access_token.py  test_b2b_token.py  test_basic_auth.py  test_refresh_token.py
tests/authentication/helpers/: keys.py  test_jwtRS512.py  token_helpers.py
tests/encryption/: test_aes.py  test_aes_encryption.py  test_jwe.py
tests/fixtures/: hermes_template.sql
tests/handlers/: conftest.py  test_loyalty_card_handler.py  test_loyalty_plan_handler.py  test_magic_link_handler.py  test_payment_account_handler.py  test_token_handler.py  test_user_handler.py  test_wallet_handler.py  test_wallet_overview.py
tests/helpers/: authenticated_request.py  database_set_up.py  local_vault.py
tests/history/: test_users_history.py
tests/resources/: test_loyalty_cards.py  test_loyalty_plans.py  test_magic_link.py  test_payment_accounts.py  test_token.py  test_users.py  test_wallet.py  test_wallet_overview.py
tests/resources/component/: config.py  test_token.py  test_users.py
tests/resources/component/loyalty_cards/: test_add.py  test_add_and_authorise.py  test_add_and_register.py  test_add_trusted.py  test_authorise.py  test_delete.py  test_join.py  test_register.py
tests/resources/component/wallet/: test_create_trusted.py  test_loyalty_card_balance.py  test_loyalty_card_transactions.py  test_loyalty_card_vouchers.py
tests/resources/unit/: test_loyalty_cards.py  test_loyalty_plans.py  test_payment_accounts.py  test_users.py  test_wallet.py  test_wallet_overview.py
tests/serializers/: test_base.py  test_loyalty_cards.py  test_loyalty_plans.py  test_loyalty_plans_serializer.py  test_payment_card.py  test_payment_card_serializer.py  test_token.py  test_wallet.py
tests/validators/: test_loyalty_card_validation.py  test_payment_account_validators.py  test_token_validation.py  test_user_validation.py
tests_qa/: config.py
tests_qa/tests/: conftest.py
tests_qa/tests/api/: base.py
tests_qa/tests/helpers/: constants.py  test_context.py  test_helpers.py
tests_qa/tests/payload/payment_cards/: payment_card.py
tests_qa/tests/payload/service/: customer_accounts.py
tests_qa/tests/requests/: service.py
tests_qa/tests/step_definitions/: test_paymentcard_account.py
tests_qa/tests/step_definitions/payment_cards/: paymentcards_account.py
tests_qa/tests_resources/features/payment_cards/: paymentcards_account.feature
tests_qa/tests_resources/test_data/: testdata_staging.py
(+1 files in other folders)
